Tease apart refactor so that Toasts are containing element in charge of teleporting and fixed positioning. Its children are 1 to many Toast component elements that wrap Alerts. Now supports stacking toasts.

--- a/agnostic-css/src/components/alert/alert.css
+++ b/agnostic-css/src/components/alert/alert.css
@@ -201,5 +201,8 @@
   /* We use bottom: 0, left: 0 etc., so this
   actually pushes the toast away from edge */
   margin: var(--fluid-16);
+}
+
+.alert-toast-shadow {
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 6%), 0 3px 8px 0 rgb(0 0 0 / 7%), 0 6px 18px 0 rgb(0 0 0 / 6%);
 }
